<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editor_action_search"
        android:contentDescription="@string/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:iconTint="@color/editor_toolbar_icon_tint"
        app:showAsAction="always" />

    <item
        android:id="@+id/editor_action_undo"
        android:contentDescription="@string/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        app:iconTint="@color/editor_toolbar_icon_tint"
        app:showAsAction="always" />

    <item
        android:id="@+id/editor_action_redo"
        android:contentDescription="@string/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_redo"
        app:iconTint="@color/editor_toolbar_icon_tint"
        app:showAsAction="always" />

    <item
        android:id="@+id/editor_action_save"
        android:contentDescription="@string/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:iconTint="@color/editor_toolbar_icon_tint"
        app:showAsAction="always" />
</menu>
