<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_storage"
            android:icon="@drawable/ic_storage"
            android:title="@string/menu_storage" />
        <item
            android:id="@+id/menu_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/action_trash" />
        <item
            android:id="@+id/menu_bookmarks"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
